// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: Self closing - html 1`] = `"<input type="text" />"`;

exports[`createTemplate: Self closing - svg 1`] = `"<polygon points="0,100 50,25 50,75 100,0" />"`;

exports[`createTemplate: Falsey - undefined 1`] = `"<div></div>"`;

exports[`createTemplate: Falsey - null 1`] = `"<div></div>"`;

exports[`createTemplate: Falsey - false 1`] = `"<div></div>"`;

exports[`createTemplate: Not really Falsey - "" 1`] = `"<div></div>"`;

exports[`createTemplate: Not really Falsey - 0 1`] = `"<div>0</div>"`;

exports[`createTemplate: Not really Falsey - NaN 1`] = `"<div>NaN</div>"`;

exports[`createTemplate: Bad template - NaN 1`] = `"<div></div>"`;

exports[`createTemplate: Conditional 1`] = `"<div>hello</div>"`;

exports[`createTemplate: Style attribute 1`] = `"<div style="background-color:blue; margin:12px; --cssVar:red;">styles</div>"`;

exports[`createTemplate: data-trigger attribute 1`] = `"<div data-trigger="click:random focus:thing">triggers</div>"`;

exports[`createTemplate: Array of templates 1`] = `
"<ul>
    <li>0</li>
    <li>1</li>
    <li>2</li>
    <li>3</li>
    <li>4</li>
    <li>5</li>
    <li>6</li>
    <li>7</li>
    <li>8</li>
    <li>9</li>
</ul>"
`;

exports[`createTemplate: Should not throw on script tag with trusted attribute 1`] = `"<script type="module" " src="main.js " "></script>"`;

exports[`createTemplate: Escapes children 1`] = `
"<div>&lt;script type=&quot;text/javascript&quot;&gt; const hostRegex = /^https?://([^/]+)/.*$/i;
    const host = document.URL.replace(hostRegex, &#39;$1&#39;); const socket
    = new WebSocket(/); const reload = () =&gt;{ location.reload(); console.log(&#39;...reloading&#39;);
    }; socket.addEventListener(&#39;message&#39;, reload); console.log(&#39;[plaited]
    listening for file changes&#39;); &lt;/script&gt;</div>"
`;

exports[`createTemplate: Does not escape children when trusted 1`] = `
"<div>
    <script type="text/javascript">
        const hostRegex = /^https?://([^/]+)/.*$/i;
        const host = document.URL.replace(hostRegex, '$1');
        const socket = new WebSocket(/);
        const reload = () =>{
          location.reload();
          console.log('...reloading');
        };
        socket.addEventListener('message', reload);
        console.log('[plaited] listening for file changes');
    </script>
</div>"
`;

exports[`createTemplate: Non declarative shadow DOM template 1`] = `
"<ul>
    <template><span>I am a span!!!</span>
    </template>
    <li>item-0</li>
    <li>item-1</li>
    <li>item-2</li>
    <li>item-3</li>
    <li>item-4</li>
    <li>item-5</li>
    <li>item-6</li>
    <li>item-7</li>
    <li>item-8</li>
    <li>item-9</li>
</ul>"
`;

exports[`createTemplate: Fragment 1`] = `
"<li>In 5</li>
<li>In 4</li>
<li>In 3</li>
<li>In 2</li>
<li>In 1</li>
<li>Blast Off!!!</li>"
`;

exports[`createTemplate: CustomElement hoisting its styles 1`] = `
{
  "content": "<nested-component></nested-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom & host styles 1`] = `
{
  "content": "<nested-component></nested-component>",
  "stylesheets":   
Set {
    "nested-component { display: flex; flex-direction: column; }",
  }
,
}
`;

exports[`createTemplate: CustomElement with styled slotted component 1`] = `
{
  "content": 
"<nested-component>
    <p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p>
</nested-component>"
,
  "stylesheets":   
Set {
    "nested-component { display: flex; flex-direction: column; }",
    ".slotted-paragraph_LTc5ND { color: rebeccapurple; }",
  }
,
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": "<top-component></top-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": "<top-component></top-component>",
  "stylesheets":   
Set {
    "top-component { display: block; }",
  }
,
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<top-component>
    <img class="image_Mjc4MD" />
</top-component>"
,
  "stylesheets":   
Set {
    "top-component { display: block; }",
    ".image_Mjc4MD { width: 100%; aspect-ratio: 16 / 9; }",
  }
,
}
`;

exports[`createTemplate: Trims whitespace 1`] = `"<div>trims white-space</div>"`;
